* Wed Dec 16 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.96~dev
  Bumped maximum channel count to 32 to accommodate GPS+GLONASS devices.
  API version bumped to 5, redesign in progress (changes are documented
  in the Client HOWTO). cgps now handles resize signals. Code can now
  link with uClibc for embedded use.  Various bugs in the C++ binding
  have been fixed.

* Tue Jul 13 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.95
  The autonomous robot submarine total world domination release!
  Rationalize clearing and generation of DOPs, this makes epx/epy much
  more generally available. Fixed the test productions for the udev
  magic and added a troubleshooting note in INSTALL. cgps now displays
  epx/epy rather than eph. Speed is now always reported if our last
  two fixes were good, even if the GPS didn't compute it.  Reading
  packets from UDP datagrams by specifying a listening address and
  port is now supported, and the regression-test driver cam now be
  told to force this with -u; this enables regression testing in
  chroot jails where access to ptys is locked out. AIS code now
  interprets message type 6 and 8 application IDs correctly as a
  Designated Area Code and Functional ID pair. gpspipe has a new -T
  option for setting the timestamp format.  xgpsspeed is completely
  rewritten in Python, eliminating some dependencies on ancient X
  libraries.  We now ship a Qt binding for the client library. Note
  a GCC 4.2.1 optimizer bug.  gpsdcode now uses | as a field separator
  in -c mode, as string fields can contain commas.  Corrected error
  or reporting of AIS rate-of-turn fields.

* Tue Apr 20 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.94
  Error-checking in the 50bps subframe code has been greatly improved.
  The Garmin GPS driver can now use libusb, if it is present, to do
  device discovery. The libgps library has been split apart; the
  service functions used by the daemon now live in libgpsd. This