@@ -3,7 +3,8 @@
   API version bumped to 5, redesign in progress (changes are documented
   in the Client HOWTO). cgps now handles resize signals. Code can now
   link with uClibc for embedded use.  Various bugs in the C++ binding
-  have been fixed.
+  have been fixed. gpxlogger can now daemonize and write to a specified
+  log file.
 
 * Tue Jul 13 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.95
   The autonomous robot submarine total world domination release!
